--- a/pages/index.css
+++ b/pages/index.css
@@ -25,6 +25,7 @@
 @import url("../blocks/feynman/__title/feynman__title.css");
 @import url("../blocks/video/video.css");
 @import url("../blocks/video/__iframes/video__iframes.css");
+@import url("../blocks/video/__iframe/video__iframe.css");
 @import url("../blocks/kaufman/kaufman.css");
 @import url("../blocks/kaufman/__triangle/kaufman__triangle.css");
 @import url("../blocks/section-subtitle/section-subtitle.css");
